tests/res/compile_errors/duplicate_param.say
// Two parameters with the same name collide.
fn f(x, x) { return x; } // error: 'x' already declared in this scope
